<resources>
    <string name="app_name">Festival du MIAGE</string>
    <string name="titleProgressBar">FESTIVAL DU MIAGE</string>
    <string name="vendredi">Vendredi</string>
    <string name="samedi">Samedi</string>
    <string name="acoustique">Acoustique</string>
    <string name="amplifie">Amplifiée</string>
    <string name="jour">Jour :</string>
    <string name="scene">Scène :</string>
    <string name="notification_channel_id">Canal</string>
    <string name="notification_channel_title">Titre</string>
    <string name="notification_channel_description">Description</string>
</resources>