<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <SearchView
                android:id="@+id/searchBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:iconifiedByDefault="false"
                android:layout_weight="1"
                android:queryHint="Rechercher..." >

            </SearchView>

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/clear_filter"
                android:scaleType="fitCenter"
                android:padding="5dp"
                android:onClick="clearFilter"
                android:background="@null" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/fav"
                android:scaleType="fitCenter"
                android:padding="5dp"
                android:onClick="showFavoris"
                android:background="@null"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/jour" />

            <com.google.android.material.chip.ChipGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleSelection="true"
                app:singleLine="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipVendredi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vendredi"
                    android:checkable="true"
                    android:onClick="sort"
                    android:theme="@style/Theme.MaterialComponents.Light"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipSamedi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/samedi"
                    android:checkable="true"
                    android:onClick="sort"
                    android:theme="@style/Theme.MaterialComponents.Light"/>

            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/scene" />

            <com.google.android.material.chip.ChipGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleSelection="true"
                app:singleLine="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipAcoustique"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/acoustique"
                    android:checkable="true"
                    android:onClick="sort"
                    android:theme="@style/Theme.MaterialComponents.Light"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipAmplifiee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amplifie"
                    android:checkable="true"
                    android:onClick="sort"
                    android:theme="@style/Theme.MaterialComponents.Light"/>

            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>

        <ListView
            android:id="@+id/listViewGroups"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>